--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <!-- Avatar et présentation -->
                 <div class="text-center md:text-left">
-                    <div class="w-64 h-64 mx-auto md:mx-0 rounded-full bg-gradient-to-br from-blue-400 to-purple-600 p-1 mb-8 hover:scale-110 transition-transform duration-500 relative overflow-hidden group">
+                    <div class="w-64 h-64 md:w-96 md:h-96 mx-auto md:mx-8 rounded-full bg-gradient-to-br from-blue-400 to-purple-600 p-0 mb-8 hover:scale-110 transition-transform duration-500 relative overflow-hidden group">
                         <div class="w-full h-full rounded-full bg-gray-800 flex items-center justify-center text-6xl relative z-10">
                             <img src="photo.jpg" alt="">
                         </div>
